test/runtime/configMatters/comm/ugni/SIGBUS-array-alloc.good
SIGBUS-array-alloc.chpl:16: error: Out of memory allocating "array elements"
